--- a/notes/第2章-感知机.md
+++ b/notes/第2章-感知机.md
@@ -1,1 +1,32 @@
 # 第2章 感知机
+* 感知机是神经网络（深度学习）的起源算法。
+
+## 2.1 感知机是什么
+* 感知机接多个输入信号，输出一个信号。
+* 阈值
+
+## 2.2 简单的逻辑电路
+### 2.2.1 与门
+### 2.2.2 与非门和或门
+
+## 2.3 感知机的实现
+### 2.3.1 简单的实现
+### 2.3.2 导入权重和偏置
+* 偏置：用于控制神经元被激活的容易程度。
+
+### 2.3.3 使用权重和偏置的实现
+
+## 2.4 感知机的局限性
+### 2.4.1 异或门
+### 2.4.2 线性和非线性
+* 非线性空间：曲线分割而成的空间
+* 线性空间：直线分割而成的空间
+
+## 2.5 多层感知机
+### 2.5.1 已有的电路组合
+### 2.5.2 异或门的实现
+* 多层感知机
+
+## 2.6 从与非门到计算机
+
+
