--- a/notes/第4章-神经网络的学习.md
+++ b/notes/第4章-神经网络的学习.md
@@ -16,9 +16,16 @@
 ### 4.1.2 训练数据和测试数据
 * 训练数据（监督数据）和测试数据
 * 泛化能力：处理未被观察过的数据（不包含训练数据）的能力。
+* 过拟合（over fitting）：只对某个数据集过度拟合的状态。
+
 ## 4.2 损失函数
-* 均方误差
-* 交叉熵误差
+* 神经网络学习中所用的指标：损失函数（loss function）  
+  损失函数表示当前的神经网络对监督数据在多大程度上不拟合
+  * 均方误差（mean squared error）
+  * 交叉熵误差（cross entropy error）
+    
+* one-hot表示：正确标签表示为1，其他为0的表示方法
+* 
 
 ### 4.2.1 均方误差
 ### 4.2.2 交叉熵误差
